// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navbar render default 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="navbar-nav d-flex justify-content-between"
    style={
      Object {
        "width": "100%",
      }
    }
  />
</nav>
`;

exports[`Navbar should render with children 1`] = `
<nav
  className="navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="navbar-nav d-flex justify-content-between"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    children
  </div>
</nav>
`;

exports[`Navbar should render with children and className 1`] = `
<nav
  className="test-class navbar navbar-expand-lg navbar-light bg-light"
>
  <div
    className="navbar-nav d-flex justify-content-between"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    children
  </div>
</nav>
`;
